# FASTDelphos

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/session-end/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/validate-agora/: SKILL.md
doc_proyecto/: ESQUEMA_POC.md  FASE2_WHYNOTES.md  FASE3_FIXICLASIFIC.md  FASE4_SHADOWEDALIAS.md  HANDOVER.md  VISITOR.md
docs/superpowers/plans/: 2026-06-17-fastdelphos-phase1.md  2026-07-05-ast-call-visitor.md  2026-07-05-case-2b-local-alias.md  2026-07-05-graph-search.md  2026-07-05-node-panel.md  2026-07-05-sql-dynamic-fstring-fix.md  2026-07-07-file-exclusion.md  2026-07-08-fix-sql-node-hydration.md  2026-07-08-phase2-llm-config-and-anthropic-adapter.md  2026-07-08-phase2-notes-overlay.md  2026-07-08-unified-function-node-hydration.md  2026-07-09-classifier-internal-external-fix.md  2026-07-09-endpoint-identity-fix.md  2026-07-09-gitignore-support.md  2026-07-09-openai-compatible-adapter.md
docs/superpowers/specs/: 2026-07-05-graph-search-design.md  (+2 more)
scripts/: llm_smoke_test.py  openai_smoke_test.py
src/cc/: __main__.py  annotate.py  cli.py  gaps.py  oracle.py  pipeline.py  serve.py
src/cc/adapters/: base.py  (+1 more)
tests/: conftest.py  test_annotate.py  test_calls.py  test_calls_resolver.py  test_cli_annotate.py  test_collect.py  test_endpoints.py  test_gaps.py  test_graph.py  test_griffe_loader.py  test_llm_anthropic_adapter.py  test_llm_client.py  test_llm_config.py  test_llm_neighborhood.py  test_llm_notes.py  test_llm_openai_compatible_adapter.py  test_llm_prompt.py  test_llm_scope.py  test_llm_source_span.py  test_models_ext.py  test_node_hydration.py  test_oracle.py  test_pipeline.py  test_render.py  test_schema.py  test_serve.py  test_sql.py
(+31 files in other folders)
