[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comprehension-compiler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "griffe>=0.47",
    "pyan3>=1.4",
    "sqlglot>=25.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "fastapi>=0.110",   # for test fixtures only
]

[project.scripts]
cc = "cc.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cc"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
