[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comprehension-compiler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Pinned to a tested range: ShadowTolerantLoader (extract/_griffe_loader.py)
    # overrides GriffeLoader internals (_internal API, no compat guarantee) to
    # tolerate re-export aliases shadowing real subpackages. An upgrade must
    # re-pass tests/test_griffe_loader.py before widening this range.
    "griffe>=2.0,<2.1",
    "sqlglot>=25.0",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "pathspec>=0.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "fastapi>=0.110",   # for test fixtures only
]

[project.scripts]
cc = "cc.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cc"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
